@@ -35,6 +35,9 @@ use Getopt::Long;
 
 use strict vars;
 
+## Template parser
+require "--LIBDIR--/parser.pl";
+
 ## Sympa API
 use List;
 use mail;
@@ -796,7 +799,7 @@ while ($query = &new_loop()) {
 	    $param->{'list_conf'} = $list->{'admin'};
 	}
 
-	&List::parse_tpl($param,$main , STDOUT);
+	&parse_tpl($param,$main , STDOUT);
     }    
 
     # At the end of this loop reset variables is important to use this cgi as a CGI::fast 
@@ -4357,7 +4360,7 @@ sub do_create_list {
     $parameters->{'topics'} = $in{'topics'};
 
     open CONFIG, ">$list_dir/config";
-    &List::parse_tpl($parameters, $template_file, CONFIG);
+    &parse_tpl($parameters, $template_file, CONFIG);
     close CONFIG;
     
     open INFO, ">$list_dir/info" ;
